package src.linda.server;

import java.util.Collection;

import src.linda.Callback;
import src.linda.Linda;
import src.linda.Tuple;

/**
 * Client part of a client/server implementation of Linda.
 * It implements the Linda interface and propagates everything to the server it
 * is connected to.
 */
public class LindaClient implements Linda {

    /**
     * Initializes the Linda implementation.
     * 
     * @param serverURI the URI of the server, e.g.
     *                  "rmi://localhost:4000/LindaServer" or
     *                  "//localhost:4000/LindaServer".
     */
    public LindaClient(String serverURI) {
        // TO BE COMPLETED
    }

    @Override
    public void write(Tuple t) {
        // TODO Auto-generated method stub

    }

    @Override
    public Tuple take(Tuple template) {
        // TODO Auto-generated method stub
        return null;
    }

    @Override
    public Tuple read(Tuple template) {
        // TODO Auto-generated method stub
        return null;
    }

    @Override
    public Tuple tryTake(Tuple template) {
        // TODO Auto-generated method stub
        return null;
    }

    @Override
    public Tuple tryRead(Tuple template) {
        // TODO Auto-generated method stub
        return null;
    }

    @Override
    public Collection<Tuple> takeAll(Tuple template) {
        // TODO Auto-generated method stub
        return null;
    }

    @Override
    public Collection<Tuple> readAll(Tuple template) {
        // TODO Auto-generated method stub
        return null;
    }

    @Override
    public void eventRegister(eventMode mode, eventTiming timing, Tuple template, Callback callback) {
        // TODO Auto-generated method stub

    }

    @Override
    public void debug(String prefix) {
        // TODO Auto-generated method stub

    }

    // TO BE COMPLETED

}
